[package]
name = "chain-builder"
version = "0.1.27"
edition = "2021"
description = "A query builder for MySQL for Rust is designed to be flexible and easy to use."
license = "MIT"
readme = "README.md"
keywords = ["database", "mysql", "query", "builder", "rust"]
categories = ["database", "database-implementations"]
repository = "https://github.com/AssetsArt/chain-builder.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8" }

[dev-dependencies]
chain-builder = { path = ".", default-features = false, features = ["dev-dependencies"] }

[features]
default = ["mysql", "sqlx_mysql"]
full = ["mysql", "sqlx_mysql", "sqlite", "sqlx_sqlite"]
sqlx_mysql = ["sqlx/mysql"]
sqlx_sqlite = ["sqlx/sqlite"]
mysql = []
postgres = []
sqlite = []
dev-dependencies = ["full"]


[[test]]
name = "mysql_test"
path = "tests/mysql_test.rs"
required-features = ["mysql"]

[[test]]
name = "sqlite_test"
path = "tests/sqlite_test.rs"
required-features = ["sqlite"]
